Fixed button on mobile hopefully

--- a/static/assets/css/screen.css
+++ b/static/assets/css/screen.css
@@ -4,17 +4,17 @@ a, .mix-green { color: rgb(120, 190, 30) !important; }
 
 /* Fix default code colors and display */
 code {
-	margin: 0 2px;
-	padding: 0px 5px;
-	border: 1px solid #ddd;
-	background-color: #f8f8f8;
-	border-radius: 3px;
-	color: rgb(40, 40, 40);
+  margin: 0 2px;
+  padding: 0px 5px;
+  border: 1px solid #ddd;
+  background-color: #f8f8f8;
+  border-radius: 3px;
+  color: rgb(40, 40, 40);
 }
 
 /* Make text a little bigger */
 body {
-	font-size: 16px;
+  font-size: 16px;
 }
 
 /* Logo in upper right */
@@ -27,26 +27,26 @@ body {
 
 /* Default fonts if proxima nova fails */
 body, h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
-	font-family: "proxima-nova", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "proxima-nova", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 /* Navbar */
 .navbar { background: #FFF; border-radius: 0; }
 .navbar-brand {
-	padding-top: 15px;
-	margin-top: 0;
-	padding-bottom: 30px;
-	font-size: 30px;
-	font-weight: 200;
+  padding-top: 15px;
+  margin-top: 0;
+  padding-bottom: 30px;
+  font-size: 30px;
+  font-weight: 200;
 }
 .navbar-header {
-	height: 82px;
+  height: 82px;
 }
 .navbar-nav {
   margin-top: 16px;
-	text-transform: uppercase;
-	font-weight: 600;
-	font-size: 14px;
+  text-transform: uppercase;
+  font-weight: 600;
+  font-size: 14px;
 }
 @media (max-width: 767px) {
   .navbar-nav {
@@ -55,27 +55,28 @@ body, h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 }
 .navbar-toggle {
   margin-top: 23px;
+  z-index: 99;
 }
 
 /* Bottom footer */
 .footer {
-	position: absolute;
-	bottom: 0;
-	width: 100%;
-	text-align: center;
-	border-top: 5px solid rgb(40, 40, 40);
-	background-color: rgb(51, 51, 51);
-	color: rgb(200, 200, 200);
-	font-size: 14px;
-	clear: both;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  text-align: center;
+  border-top: 5px solid rgb(40, 40, 40);
+  background-color: rgb(51, 51, 51);
+  color: rgb(200, 200, 200);
+  font-size: 14px;
+  clear: both;
 }
 .footer-space {
-	height: 100px;
+  height: 100px;
 }
 .footer-divider { margin: 0 5px; }
 .credit {
-	padding-top: 4px;
-	margin-bottom: 0;
+  padding-top: 4px;
+  margin-bottom: 0;
 }
 .credit > span:nth-child(1), .credit > span:nth-child(3), .credit > span:nth-child(5)  { display: block; }
 .credit > span:nth-child(2), .credit > span:nth-child(4) { display: none; }
@@ -83,40 +84,40 @@ body, h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 /* Fill page */
 html, body { height: 100%; }
 .main-container {
-	border-top: 5px solid rgb(120, 190, 30);
-	min-height: 100%;
-	position: relative;
+  border-top: 5px solid rgb(120, 190, 30);
+  min-height: 100%;
+  position: relative;
 }
 
 /* Adjust footer display appropriately */
 @media (min-width: 768px) {
-	.footer-space, .footer { height: 52px !important; }
-	.credit > span:nth-child(1), .credit > span:nth-child(2), .credit > span:nth-child(3) { display: inline-block; }
-	.credit > span:nth-child(5) { display: block; } 
-	.credit > span:nth-child(4) { display: none; }
+  .footer-space, .footer { height: 52px !important; }
+  .credit > span:nth-child(1), .credit > span:nth-child(2), .credit > span:nth-child(3) { display: inline-block; }
+  .credit > span:nth-child(5) { display: block; } 
+  .credit > span:nth-child(4) { display: none; }
 }
 @media (min-width: 992px) {
-	.footer-space, .footer { height: 33px !important; }
-	.credit > span:nth-child(4), .credit > span:nth-child(5) { display: inline-block; }
+  .footer-space, .footer { height: 33px !important; }
+  .credit > span:nth-child(4), .credit > span:nth-child(5) { display: inline-block; }
 }
 
 /* GitHub like code highlighting */
 .prettyprint {
-	font-family: Menlo, 'Bitstream Vera Sans Mono', 'DejaVu Sans Mono', Monaco, Consolas, monospace;
-	font-size: 12px;
-	line-height: 1.5;
-	border: 1px solid #ccc;
-	padding: 10px;
-	display: block;
-	margin: 0 0 10px;
-	font-size: 13px;
-	line-height: 1.428571429;
-	color: #333;
-	word-break: break-all;
-	word-wrap: break-word;
-	background-color: #f5f5f5;
-	border: 1px solid #ccc !important;
-	border-radius: 4px !important;
+  font-family: Menlo, 'Bitstream Vera Sans Mono', 'DejaVu Sans Mono', Monaco, Consolas, monospace;
+  font-size: 12px;
+  line-height: 1.5;
+  border: 1px solid #ccc;
+  padding: 10px;
+  display: block;
+  margin: 0 0 10px;
+  font-size: 13px;
+  line-height: 1.428571429;
+  color: #333;
+  word-break: break-all;
+  word-wrap: break-word;
+  background-color: #f5f5f5;
+  border: 1px solid #ccc !important;
+  border-radius: 4px !important;
 }
 
 .pln {
